--- a/css/main.css
+++ b/css/main.css
@@ -1,10 +1,29 @@
-body {
+html, body {
   background-color: #c9b5ab;
+  font-family: 'PT Serif', serif;
 }
-
-h1 {
+h1, h2, h3 {
   color: #3f1622;
+  font-family: 'PT Sans', sans-serif;
 }
-nav > ol {
+nav li {
+  list-style-type: none;
+}
+nav a {
   color: #8f2440;
+  font-family: 'PT Sans', sans-serif;
+  font-weight: bold;
+  line-height: 1.4;
+  text-decoration: none;
+}
+figcaption {
+  font-family: 'PT Serif', serif;
+  font-style: italic;
+  text-align: center;
+}
+main::first-line {
+  font-weight: bold;
+}
+img {
+  object-fit: cover;
 }
