--- a/css/main.css
+++ b/css/main.css
@@ -1,30 +1,60 @@
 html, body {
   background-color: #c9b5ab;
-  font-family: 'PT Serif', serif;
+  font-family: "PT Serif", serif;
+  line-height: 1.4;
 }
+
 h1, h2, h3 {
   color: #3f1622;
-  font-family: 'PT Sans', sans-serif;
+  font-family: "PT Sans", sans-serif;
 }
+
 nav li {
   list-style-type: none;
 }
+
+a:hover {
+  background-color: #222;
+  text-decoration: underline;
+}
+
 nav a {
   color: #8f2440;
-  font-family: 'PT Sans', sans-serif;
+  font-family: "PT Sans", sans-serif;
   font-weight: bold;
-  line-height: 1.4;
   text-decoration: none;
 }
+
 figcaption {
-  font-family: 'PT Serif', serif;
+  font-family: "PT Serif", serif;
   font-style: italic;
   text-align: center;
 }
+
 main::first-line {
   font-weight: bold;
 }
+
 img {
   max-height: 100%;
   max-width: 100%;
+  width: inherit;
+}
+
+p {
+  font-size: .8rem;
+  font-weight: normal;
+}
+
+.firstlist {
+  list-style-type: lower-greek;
+}
+
+blockquote > p {
+  font-size: 1.25rem;
+  font-style: italic;
+}
+
+a {
+  text-decoration: line-through;
 }
